--- a/index.html
+++ b/index.html
@@ -1,94 +1,86 @@
-
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <title>صفحة التبرع - دعم أهل غزة</title>
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background: url('https://i.imgur.com/jrM8pWy.jpg') no-repeat center center fixed;
-            background-size: cover;
-            color: white;
-            text-align: center;
-            padding: 20px;
-            direction: rtl;
-        }
-        .overlay {
-            background-color: rgba(0, 0, 0, 0.75);
-            padding: 20px;
-            border-radius: 15px;
-            margin: 20px auto;
-            max-width: 700px;
-        }
-        h1, h2 {
-            color: #f1c40f;
-        }
-        a.button {
-            background-color: #27ae60;
-            color: white;
-            padding: 15px 25px;
-            text-decoration: none;
-            font-size: 18px;
-            border-radius: 8px;
-            display: inline-block;
-            margin: 10px 0;
-        }
-        .qr-img {
-            max-width: 250px;
-            margin: 10px auto;
-        }
-        .wallet-address {
-            font-size: 18px;
-            word-break: break-word;
-            background-color: #f8f8f8;
-            color: #222;
-            padding: 10px;
-            border-radius: 5px;
-            margin: 10px auto;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>صفحة التبرع - دعم أهل غزة</title>
+  <style>
+    body {
+      margin:0; padding:0;
+      font-family: 'Arial', sans-serif;
+      background: url('https://i.imgur.com/jrM8pWy.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #f5f5f5;
+      text-align: center;
+      direction: rtl;
+    }
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.85);
+      padding: 25px;
+      border-radius: 15px;
+      margin: 20px auto;
+      max-width: 700px;
+    }
+    h1 { color: #f1c40f; }
+    h2 { color: #e67e22; }
+    a.button {
+      background-color: #27ae60;
+      color: white;
+      padding: 15px 25px;
+      text-decoration: none;
+      font-size: 18px;
+      border-radius: 8px;
+      display: inline-block;
+      margin: 10px 5px;
+    }
+    .qr-img { max-width: 250px; margin: 15px auto; }
+    .wallet-address {
+      font-size: 18px;
+      word-break: break-word;
+      background-color: #ffffff;
+      color: #222;
+      padding: 10px;
+      border-radius: 5px;
+      margin: 10px auto;
+    }
+  </style>
 </head>
 <body>
-
-<div class="overlay">
+  <div class="overlay">
     <h1>ادعم أهل غزة الآن</h1>
     <p>الوضع الإنساني في غزة كارثي. آلاف العائلات مشردة، الأطفال بدون طعام أو دواء، والمستشفيات عاجزة عن الاستمرار. هذه التبرعات موجهة مباشرة لدعم الأسر المتضررة وتوفير المساعدات العاجلة.</p>
-</div>
+  </div>
 
-<div class="overlay">
+  <div class="overlay">
     <h2>التبرع عبر Binance Pay</h2>
     <a href="https://s.binance.com/QhtkZGn3" class="button" target="_blank">ادفع عبر Binance Pay</a>
-</div>
+  </div>
 
-<div class="overlay">
+  <div class="overlay">
     <h2>التبرع بالعملات الرقمية (USDT - TRC20)</h2>
     <img src="usdt_trc20_qr.png" class="qr-img" alt="QR USDT">
     <div class="wallet-address">TK6pWU8dTLUdtC4oi2rg7ud6kqfv1aNCgw</div>
-</div>
+  </div>
 
-<div class="overlay">
+  <div class="overlay">
     <h2>فودافون كاش</h2>
     <p>رقم المحفظة: <strong>01067807544</strong></p>
     <p>رقم إضافي: <strong>01096459175</strong></p>
-</div>
+  </div>
 
-<div class="overlay">
+  <div class="overlay">
     <h2>للتبرع ببطاقة ائتمان أو أي وسيلة أخرى</h2>
     <p>تواصل معنا عبر واتساب لمزيد من طرق الدفع أو الاستفسارات:</p>
-    <a href="https://wa.me/970567125506" class="button" target="_blank">واتساب فلسطين</a><br>
+    <a href="https://wa.me/970567125506" class="button" target="_blank">واتساب فلسطين</a>
     <a href="https://wa.me/201067807544" class="button" target="_blank">واتساب مصر</a>
-</div>
+  </div>
 
-
-<div class="overlay">
+  <div class="overlay">
     <h2>شارك الصفحة مع الآخرين</h2>
     <p>ساهم في نشر الخير، وشارك هذه الصفحة مع من يستطيع التبرع.</p>
-    <a class="button" style="background-color:#3b5998;" href="https://www.facebook.com/sharer/sharer.php?u=https://example.com" target="_blank">مشاركة عبر فيسبوك</a>
-    <a class="button" style="background-color:#1da1f2;" href="https://twitter.com/intent/tweet?text=ادعم+أهل+غزة+الآن&url=https://example.com" target="_blank">مشاركة عبر تويتر</a>
-    <a class="button" style="background-color:#25D366;" href="https://wa.me/?text=ادعم%20أهل%20غزة%20من%20خلال%20هذه%20الصفحة%20https://example.com" target="_blank">مشاركة عبر واتساب</a>
-    <a class="button" style="background-color:#0088cc;" href="https://t.me/share/url?url=https://example.com&text=ادعم+أهل+غزة+من+خلال+هذه+الصفحة" target="_blank">مشاركة عبر تليغرام</a>
-</div>
-
+    <a class="button" style="background-color:#3b5998;" href="https://www.facebook.com/sharer/sharer.php?u=https://gaza-strip.github.io/Gaza/" target="_blank">فيسبوك</a>
+    <a class="button" style="background-color:#1da1f2;" href="https://twitter.com/intent/tweet?text=ادعم+أهل+غزة+الآن&url=https://gaza-strip.github.io/Gaza/" target="_blank">تويتر</a>
+    <a class="button" style="background-color:#25D366;" href="https://wa.me/?text=ادعم%20أهل%20غزة%20المن%C2%A0خلال%20هذه%20الصفحة%20https://gaza-strip.github.io/Gaza/" target="_blank">واتساب</a>
+    <a class="button" style="background-color:#0088cc;" href="https://t.me/share/url?url=https://gaza-strip.github.io/Gaza/&text=ادعم+أهل+غزة+من+خلال+هذه+الصفحة" target="_blank">تلغرام</a>
+  </div>
 </body>
 </html>
